# Alimer

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Assets/Shaders/: Common.hlsli  Triangle.hlsl
Source/Engine/: Alimer.h  AlimerConfig.h.in  Application.cpp  Application.h  CMakeLists.txt  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  PlatformDef.h  PlatformInclude.h
Source/Engine/Assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  ShaderCompiler.cpp  ShaderCompiler.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  TextureCube.cpp  TextureCube.h
Source/Engine/Core/: Assert.cpp  Assert.h  CommandLine.cpp  CommandLine.h  Log.cpp  Log.h  Main.h  Module.h  Object.cpp  Object.h  RefPtr.cpp  RefPtr.h  Signal.h  String.cpp  String.h  StringId.cpp  StringId.h  Types.h
Source/Engine/Graphics/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandQueue.h  GPUResource.cpp  GPUResource.h  Graphics.cpp  Graphics.h  Pipeline.cpp  Pipeline.h  PixelFormat.cpp  PixelFormat.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Types.cpp  Types.h
Source/Engine/Graphics/D3D12/: D3D12Buffer.cpp  D3D12Buffer.h  D3D12CommandBuffer.cpp  D3D12CommandBuffer.h  D3D12CommandQueue.cpp  D3D12CommandQueue.h  D3D12Graphics.cpp  D3D12Graphics.h  D3D12Pipeline.cpp  D3D12Pipeline.h  D3D12Sampler.cpp  D3D12Sampler.h  D3D12Shader.cpp  D3D12Shader.h  D3D12SwapChain.cpp  D3D12SwapChain.h  D3D12Texture.cpp  D3D12Texture.h  D3D12Utils.cpp  D3D12Utils.h
Source/Engine/Graphics/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandQueue.cpp  VulkanCommandQueue.h  VulkanGraphics.cpp  VulkanGraphics.h  VulkanPipeline.cpp  VulkanSampler.cpp  VulkanSampler.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtils.h
Source/Engine/IO/: FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h  MemoryStream.cpp  MemoryStream.h  Stream.cpp  Stream.h
Source/Engine/Math/: Color.cpp  Color.h  MathHelper.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Rect.cpp  Rect.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  Viewport.cpp  Viewport.h
Source/Engine/Platform/Private/: GameHost.cpp  GameHost.h
Source/Engine/Platform/Win32/: GameHost_Win32.cpp  GameWindow_Win32.cpp  GameWindow_Win32.h  Platform_Win32.h
Source/Engine/RHI/: PixelFormat.cpp  PixelFormat.h  RHI.cpp  RHI.h  RHI_D3D12.cpp  RHI_D3D12.h  RHI_Vulkan.cpp  RHI_Vulkan.h
Source/Samples/: CMakeLists.txt
Source/Samples/DrawTriangle/: main.cpp
cmake/Modules/: Alimer.cmake
